// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpansibleScatterRow should render categories corretly 1`] = `
<div
  className="expansible-scatter-row hidden"
>
   
  <ScatterRow
    data={Array []}
    domain={
      Object {
        "x": Array [
          1800,
          2020,
        ],
      }
    }
    hidden={true}
    id="obert"
    title="obert"
  />
   
</div>
`;

exports[`ExpansibleScatterRow should render subcategories correctly 1`] = `
<div
  className="expansible-scatter-row"
>
   
  <ScatterRow
    data={
      Array [
        1,
        2,
        3,
      ]
    }
    domain={
      Object {
        "x": Array [
          1800,
          2020,
        ],
      }
    }
    hidden={true}
    id="subdiv1"
    title="subdiv1"
  />
  <ScatterRow
    data={
      Array [
        4,
        5,
        6,
      ]
    }
    domain={
      Object {
        "x": Array [
          1800,
          2020,
        ],
      }
    }
    hidden={true}
    id="subdiv2"
    title="subdiv2"
  />
  <ScatterRow
    data={
      Array [
        7,
        8,
        9,
      ]
    }
    domain={
      Object {
        "x": Array [
          1800,
          2020,
        ],
      }
    }
    hidden={true}
    id="subdivtest"
    title="subdivtest"
  />
   
</div>
`;

exports[`ExpansibleScatterRow shouldn't render more than 20 items in the same 11 year period 1`] = `
<div
  className="expansible-scatter-row hidden"
>
   
  <ScatterRow
    data={
      Array [
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
        Object {
          "Born": 1990,
        },
      ]
    }
    domain={
      Object {
        "x": Array [
          1800,
          2020,
        ],
      }
    }
    hidden={true}
    id="obert"
    title="obert"
  />
   
</div>
`;
